tests/suite/fail/generated/lexer/fail_unclosed_comment_3.ny
//~ ERROR unclosed block comment
fn main() {
    let x = 3 /* unclosed block 3
    print(x)
}
